--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.9.8",
     "oscarotero/env": "^1.1.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "roots/wp-password-bcrypt": "1.0.0",
+    "wpackagist-plugin/gutenberg": "dev-trunk",
+    "wpackagist-plugin/advanced-custom-fields": "dev-trunk"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2"
