--- a/web/app/themes/yellowstudio/composer.json
+++ b/web/app/themes/yellowstudio/composer.json
@@ -19,6 +19,11 @@
       "name": "QWp6t",
       "email": "hi@qwp6t.me",
       "homepage": "https://github.com/qwp6t"
+    },
+    {
+      "name": "Robbin Johansson",
+      "email": "robbinfellow@gmail.com",
+      "homepage": "https://github.com/robbinfellow"
     }
   ],
   "keywords": ["wordpress"],
