--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-plugin/gutenberg": "dev-trunk",
-    "wpackagist-plugin/advanced-custom-fields": "dev-trunk"
+    "wpackagist-plugin/advanced-custom-fields": "dev-trunk",
+    "wpackagist-plugin/navz-photo-gallery": "^1.6.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2"
