--- a/web/app/themes/yellowstudio/package.json
+++ b/web/app/themes/yellowstudio/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/vue-fontawesome": "^0.1.1"
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "jquery": "^3.3.1"
   }
 }
